[tool.poetry]
name = "langflow"
version = "1.1.0"
description = "A Python package with a built-in web application"
authors = [
    "Carlos Coelho <carlos@langflow.org>",
    "Cristhian Zanforlin <cristhian.lousa@gmail.com>",
    "Gabriel Almeida <gabriel@langflow.org>",
    "Igor Carvalho <igorr.ackerman@gmail.com>",
    "Lucas Eduoli <lucaseduoli@gmail.com>",
    "Otávio Anovazzi <otavio2204@gmail.com>",
    "Rodrigo Nader <rodrigo@langflow.org>",
    "Italo dos Anjos <italojohnnydosanjos@gmail.com>"
]
license = "MIT"
keywords = ["nlp", "langchain", "openai", "gpt", "gui"]
readme = "README.md"
maintainers = ["mamoru <support@theaisprint.info>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langflow-base = { version = "0.1.0" }
beautifulsoup4 = ">=4.12.2,<5.0.0"
google-search-results = ">=2.4.1,<3.0.0"
google-api-python-client = ">=2.130.0,<3.0.0"
huggingface-hub = { version = ">=0.23.2,<1.0.0", extras = ["inference"] }
networkx = ">=3.1,<4.0.0"
fake-useragent = ">=1.5.0,<2.0.0"
pyarrow = ">=14.0.0,<18.0.0"
wikipedia = ">=1.4.0,<2.0.0"
qdrant-client = "~1.9.2"
weaviate-client = ">=4.8,<5.0.0"
cohere = ">=5.5.3,<6.0.0"
faiss-cpu = ">=1.8.0,<2.0.0"
types-cachetools = ">=5.3.0.5,<6.0.0"
pymongo = ">=4.6.0,<5.0.0"
supabase = "~2.6.0"
certifi = ">=2023.11.17,<2025.0.0"
fastavro = ">=1.8.0,<2.0.0"
redis = ">=5.0.1,<6.0.0"
metaphor-python = ">=0.1.11,<1.0.0"
pywin32 = { version = ">=306,<307", markers = "sys_platform == 'win32'" }
langfuse = "~2.53.1"
metal-sdk = ">=2.5.0,<3.0.0"
markupsafe = ">=2.1.3,<4.0.0"
boto3 = "~1.34.162"
numexpr = ">=2.8.6,<3.0.0"
qianfan = "==0.3.5"
pgvector = ">=0.2.3,<1.0.0"
pyautogen = ">=0.2.0,<1.0.0"
langchain = "~0.3.3"
elasticsearch = ">=8.12.0,<9.0.0"
pytube = ">=15.0.0,<16.0.0"
dspy-ai = ">=2.4.0,<3.0.0"
assemblyai = ">=0.33.0,<1.0.0"
litellm = ">=1.44.0,<2.0.0"
chromadb = ">=0.4,<1.0.0"
zep-python = ">=2.0.0,<3.0.0"
langchain-groq = ">=0.1.9,<1.0.0"
langchain-pinecone = ">=0.1.3,<1.0.0"
youtube-transcript-api = ">=0.6.2,<1.0.0"
markdown = ">=3.7,<4.0.0"
upstash-vector = ">=0.5.0,<1.0.0"
gitpython = ">=3.1.43,<4.0.0"
kubernetes = ">=30.1.0,<32.0.0"
json-repair = ">=0.25.2,<1.0.0"
langchain-google-calendar-tools = ">=0.0.1,<1.0.0"
langchain-milvus = ">=0.1.1,<1.0.0"
langwatch = "==0.1.16"
langsmith = "~0.1.136"
yfinance = ">=0.2.40,<1.0.0"
wolframalpha = ">=5.1.3,<6.0.0"
astra-assistants = { version = "~2.2.6", extras = ["tools"] }
composio-langchain = "==0.5.9"
spider-client = ">=0.0.27,<1.0.0"
nltk = ">=3.9.1,<4.0.0"
lark = ">=1.2.2,<2.0.0"
jq = ">=1.8.0,<2.0.0"
pydantic-settings = "==2.4.0"
ragstack-ai-knowledge-store = ">=0.2.1,<1.0.0"
duckduckgo-search = ">=6.3.4,<7.0.0"
opensearch-py = ">=2.7.1,<3.0.0"
langchain-google-genai = ">=2.0.1,<3.0.0"
langchain-cohere = ">=0.1.5,<1.0.0"
langchain-anthropic = ">=0.1.23,<1.0.0"
langchain-astradb = "~0.5.2"
langchain-openai = "~0.2.2"
langchain-google-vertexai = "~2.0.5"
langchain-mistralai = "~0.2.0"
langchain-chroma = ">=0.1.1,<1.0.0"
langchain-aws = ">=0.1.16,<1.0.0"
langchain-unstructured = "~0.1.5"
langchain-mongodb = ">=0.1.6,<1.0.0"
langchain-nvidia-ai-endpoints = "~0.3.0"
langchain-google-community = "~2.0.1"
langchain-elasticsearch = ">=0.2.0,<1.0.0"
langchain-ollama = ">=0.2.0,<1.0.0"
sqlalchemy = { version = ">=2.0.36,<3.0.0", extras = ["aiosqlite", "postgresql_psycopg2binary", "postgresql_psycopgbinary"] }
atlassian-python-api = ">=3.41.16,<4.0.0"
mem0ai = ">=0.1.26,<1.0.0"
pytypes="1.0b10"
psycopg2-binary="2.9.9"
psycopg2="2.9.10"
PyJWT="2.10.1"

[tool.poetry.extras]
inference = ["huggingface-hub"]

[tool.poetry.dev-dependencies]
pytest = ">=8.3.2,<9.0.0"
pytest-cov = ">=4.0.0,<5.0.0"
tox = ">=4.10.0,<5.0.0"
black = ">=23.0.0,<24.0.0"
flake8 = ">=6.1.0,<7.0.0"
mypy = ">=1.5.3,<2.0.0"
pylint = ">=2.17.0,<3.0.0"
isort = ">=5.12.0,<6.0.0"
pre-commit = ">=3.3.1,<4.0.0"
coveralls = ">=3.3.1,<4.0.0"
tox-gh-actions = "3.2.0"
ipython = ">=8.16.0,<9.0.0"
pytest-asyncio = ">=0.21.0,<1.0.0"
pytest-sugar = ">=0.9.4,<1.0.0"
twine = ">=4.9.2,<5.2.0"

[tool.poetry.scripts]
langflow = "langflow.__main__:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
